<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_delete_outline"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_visible"
        android:title="@string/action_export_visible"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_all"
        android:title="@string/action_export_all"
        app:showAsAction="never" />
</menu>
